# study-sql

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-attach.sh  post-create.sh
.github/: dependabot.yml
db/postgres/init/: 1_init.sql
db/sqlite/init/: 1_init.sql
src/poetry_template/: db.py  main.py
